--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0029.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0029.html
@@ -80,14 +80,14 @@
             <ins class="alt" title="nlp 1.00">πρόσχημα</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1208 402 1578 452">
+        <span id="w_14_0" class="ocr_word" title="bbox 1208 402 1578 452">
           <span class="alternatives">
-            <ins title="nlp 2.00">σιμθλατιονεμ</ins>
+            <ins class="alt" title="nlp 2.00">simulationem</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 1608 404 1798 452">
+        <span id="w_14_1" class="ocr_word" title="bbox 1208 402 1578 452">
           <span class="alternatives">
-            <ins title="nlp 2.00">licitam</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -433,19 +433,19 @@
             <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
-        <span id="w_82_1" class="ocr_word" title="bbox 1357 1159 1396 1189">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_83" class="ocr_word" title="bbox 1438 1144 1558 1206">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">308,</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1594 1145 1659 1192">
+        <span id="w_84_0" class="ocr_word" title="bbox 1594 1145 1659 1192">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">29</ins>
+            <ins class="alt" title="nlp 2.00">29</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 1594 1145 1659 1192">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τῆς</ins>
           </span>
         </span>
       </span>
@@ -512,11 +512,6 @@
         <span id="w_97_0" class="ocr_word" title="bbox 398 1380 436 1411">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">11</ins>
-          </span>
-        </span>
-        <span id="w_97_1" class="ocr_word" title="bbox 398 1380 436 1411">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 471 1366 590 1425">
