--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0110.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0110.html
@@ -982,14 +982,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 1756 1872 1942 1919" lang="grc">
+        <span id="w_187_0" class="ocr_word" title="bbox 1756 1872 1942 1919">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μελισ-</ins>
+            <ins class="alt" title="nlp 2.00">Μελισσηνοῦ</ins>
           </span>
         </span>
-        <span id="w_188" class="ocr_word" title="bbox 1969 1881 1985 1914">
+        <span id="w_187_1" class="ocr_word" title="bbox 1756 1872 1942 1919">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ο</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
