--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0500.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0500.html
@@ -1449,16 +1449,21 @@
             <ins title="nlp 2.00">αὐτοὶ</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1599 2719 1861 2785" lang="grc">
+        <span id="w_278_0" class="ocr_word" title="bbox 1599 2719 1861 2785">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντεπεζή-</ins>
+            <ins class="alt" title="nlp 2.00">ἀντεπεζήδὲ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 278 2886 483 2930">
-        <span id="w_279" class="ocr_word" title="bbox 278 2891 331 2930" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 278 2891 331 2930">
           <span class="alternatives">
-            <ins title="nlp 2.00">23 δὲ F</ins>
+            <ins class="alt" title="nlp 2.00">23</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 278 2891 331 2930">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
