--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0127.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0127.html
@@ -1312,16 +1312,21 @@
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_257" class="ocr_word" title="bbox 1702 2411 1788 2454" lang="grc">
+        <span id="w_257_0" class="ocr_word" title="bbox 1702 2411 1788 2454">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀν-</ins>
+            <ins class="alt" title="nlp 2.00">ἀνθρώπων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 45 2479 1789 2548">
-        <span id="w_258" class="ocr_word" title="bbox 45 2482 319 2548" lang="grc">
+        <span id="w_258_0" class="ocr_word" title="bbox 45 2482 319 2548">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β θρώπων</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_258_1" class="ocr_word" title="bbox 45 2482 319 2548">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 356 2500 470 2541" lang="grc">
@@ -1362,11 +1367,6 @@
         <span id="w_266" class="ocr_word" title="bbox 1563 2481 1685 2532" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἰδὼν</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 1722 2503 1789 2531" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄν</ins>
           </span>
         </span>
       </span>
