--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0151.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0151.html
@@ -164,7 +164,7 @@
         </span>
         <span id="w_27_1_1" class="ocr_word" title="bbox 1277 450 1596 518">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1210,9 +1210,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1552 2317 1673 2384" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1552 2317 1673 2384">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥόγα</ins>
+            <ins class="alt" title="nlp 2.00">ῥόγα</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 1552 2317 1673 2384">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
           </span>
         </span>
       </span>
