--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
@@ -899,9 +899,9 @@
             <ins class="alt" title="nlp 1.00">ἀκούω</ins>
           </span>
         </span>
-        <span id="w_175_0" class="ocr_word" title="bbox 1477 1702 1792 1770">
+        <span id="w_175_0_0" class="ocr_word" title="bbox 1477 1702 1792 1770">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">περιφεεόμε-</ins>
+            <ins class="alt" title="nlp 2.00">περιφερόμενον</ins>
           </span>
         </span>
       </span>
@@ -909,11 +909,6 @@
         <span id="w_176" class="ocr_word" title="bbox 39 1797 71 1829">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_178_0" class="ocr_word" title="bbox 230 1800 315 1831">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">νον</ins>
           </span>
         </span>
         <span id="w_178_1" class="ocr_word" title="bbox 230 1800 315 1831">
