--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0129.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0129.html
@@ -1069,14 +1069,14 @@
             <ins class="alt" title="nlp 2.00">„νὴ</ins>
           </span>
         </span>
-        <span id="w_205_1" class="ocr_word" title="bbox 1402 2091 1510 2157">
+        <span id="w_206_0" class="ocr_word" title="bbox 1539 2091 1626 2142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 1539 2091 1626 2142" lang="grc">
+        <span id="w_206_1" class="ocr_word" title="bbox 1539 2091 1626 2142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins class="alt" title="nlp 2.00">Κοσμᾶν,</ins>
           </span>
         </span>
       </span>
