--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0284.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0284.html
@@ -151,9 +151,9 @@
             <ins class="alt" title="nlp 1.00">κατέλαβε.</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1906 459 1932 492">
+        <span id="w_28_0" class="ocr_word" title="bbox 1906 459 1932 492">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -529,7 +529,7 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1746 1066 1881 1118" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρουσίου</ins>
+            <ins title="nlp 2.00">Ρουσίου</ins>
           </span>
         </span>
       </span>
