--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0130.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0130.html
@@ -1153,11 +1153,6 @@
             <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_220_1" class="ocr_word" title="bbox 408 2112 475 2141">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_221" class="ocr_word" title="bbox 513 2091 796 2158" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτόχρημα</ins>
@@ -1178,9 +1173,14 @@
             <ins class="alt" title="nlp 1.00">ἐπικαθημένην</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1703 2113 1803 2154" lang="grc">
+        <span id="w_225_0" class="ocr_word" title="bbox 1703 2113 1803 2154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῖς</ins>
+            <ins class="alt" title="nlp 2.00">τοῖς</ins>
+          </span>
+        </span>
+        <span id="w_225_1" class="ocr_word" title="bbox 1703 2113 1803 2154">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κείλεσιν</ins>
           </span>
         </span>
       </span>
