--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0162.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0162.html
@@ -1018,9 +1018,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 225 2071 1898 2146">
-        <span id="w_199" class="ocr_word" title="bbox 490 2077 582 2140" lang="grc">
+        <span id="w_199_0" class="ocr_word" title="bbox 490 2077 582 2140">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὡς</ins>
+            <ins class="alt" title="nlp 2.00">(ὡς</ins>
+          </span>
+        </span>
+        <span id="w_199_1" class="ocr_word" title="bbox 490 2077 582 2140">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 621 2073 645 2125" lang="grc">
@@ -1051,11 +1056,6 @@
         <span id="w_205" class="ocr_word" title="bbox 1535 2077 1747 2129" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοσούτῳ</ins>
-          </span>
-        </span>
-        <span id="w_206" class="ocr_word" title="bbox 1785 2080 1898 2130" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κλύδωνι</ins>
           </span>
         </span>
       </span>
