--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0153.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0153.html
@@ -879,9 +879,14 @@
             <ins class="alt" title="nlp 1.00">αὐλιζομένου</ins>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 1505 1694 1586 1759" lang="grc">
+        <span id="w_173_0" class="ocr_word" title="bbox 1505 1694 1586 1759">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὗ</ins>
+            <ins class="alt" title="nlp 2.00">(</ins>
+          </span>
+        </span>
+        <span id="w_173_1" class="ocr_word" title="bbox 1505 1694 1586 1759">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὗ</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1626 1692 1709 1743" lang="grc">
