--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0285.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0285.html
@@ -379,9 +379,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 62 900 1796 970">
-        <span id="w_72" class="ocr_word" title="bbox 62 920 85 953">
+        <span id="w_72_0" class="ocr_word" title="bbox 62 920 85 953">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_72_1" class="ocr_word" title="bbox 62 920 85 953">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 108 920 222 962" lang="grc">
@@ -417,11 +422,6 @@
         <span id="w_79" class="ocr_word" title="bbox 1318 901 1608 970" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπαγγέλλει</ins>
-          </span>
-        </span>
-        <span id="w_80" class="ocr_word" title="bbox 1632 905 1796 955" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντα</ins>
           </span>
         </span>
       </span>
@@ -1269,12 +1269,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 947 2376 1159 2442" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολέμου</ins>
-          </span>
-        </span>
-        <span id="w_246" class="ocr_word" title="bbox 1175 2395 1185 2405">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">πολέμου·</ins>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 1234 2377 1317 2426" lang="grc">
