--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0406.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0406.html
@@ -415,9 +415,14 @@
             <ins class="alt" title="nlp 1.00">προὐκάθητο</ins>
           </span>
         </span>
-        <span id="w_80_0" class="ocr_word" title="bbox 851 993 937 1058">
+        <span id="w_80_0_0" class="ocr_word" title="bbox 851 993 937 1058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἦν</ins>
+            <ins class="alt" title="nlp 2.00">(ἦν</ins>
+          </span>
+        </span>
+        <span id="w_80_0_1" class="ocr_word" title="bbox 851 993 937 1058">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 980 1013 1073 1059" lang="grc">
@@ -438,11 +443,6 @@
         <span id="w_84_0" class="ocr_word" title="bbox 1560 990 1738 1040">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ὁποίαν</ins>
-          </span>
-        </span>
-        <span id="w_84_1" class="ocr_word" title="bbox 1560 990 1738 1040">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οὔπω</ins>
           </span>
         </span>
       </span>
