--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0132.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0132.html
@@ -131,11 +131,6 @@
             <ins class="alt" title="nlp 2.00">ἴριδος,</ins>
           </span>
         </span>
-        <span id="w_23_1" class="ocr_word" title="bbox 845 473 1030 538">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 1069 472 1152 523" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -626,9 +621,9 @@
             <ins class="alt" title="nlp 2.00">αὐτοῦ,</ins>
           </span>
         </span>
-        <span id="w_119_1" class="ocr_word" title="bbox 1581 1248 1736 1301">
+        <span id="w_119_1_0" class="ocr_word" title="bbox 1581 1248 1736 1301">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
       </span>
