--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0286.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0286.html
@@ -588,9 +588,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 1307 1886 1371">
-        <span id="w_112" class="ocr_word" title="bbox 206 1328 295 1358" lang="grc">
+        <span id="w_112_0" class="ocr_word" title="bbox 206 1328 295 1358">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ’ αὐτῶν</ins>
+            <ins class="alt" title="nlp 2.00">κατ’</ins>
+          </span>
+        </span>
+        <span id="w_112_1" class="ocr_word" title="bbox 206 1328 295 1358">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 558 1325 877 1371" lang="grc">
@@ -1446,7 +1451,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1761 2755 1892 2802" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρουσιώτας</ins>
+            <ins title="nlp 2.00">Ρουσιώτας</ins>
           </span>
         </span>
       </span>
