--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0163.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0163.html
@@ -174,14 +174,19 @@
             <ins class="alt" title="nlp 1.00">ἀφ’</ins>
           </span>
         </span>
-        <span id="w_32_0" class="ocr_word" title="bbox 919 548 993 594">
+        <span id="w_32_0_0" class="ocr_word" title="bbox 919 548 993 594">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἀφ᾿</ins>
+            <ins class="alt" title="nlp 2.00">(ἀφ'</ins>
+          </span>
+        </span>
+        <span id="w_32_0_1" class="ocr_word" title="bbox 919 548 993 594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_32_1" class="ocr_word" title="bbox 919 548 993 594">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">ὦν,</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 1076 567 1142 605" lang="grc">
@@ -197,11 +202,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1403 565 1486 595" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1523 565 1575 595" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -523,14 +523,14 @@
             <ins title="nlp 2.00">εἴτε</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1491 1089 1656 1152" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 1491 1089 1656 1152">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁποῖα</ins>
+            <ins class="alt" title="nlp 2.00">(ὁποῖα</ins>
           </span>
         </span>
-        <span id="w_105" class="ocr_word" title="bbox 1696 1101 1820 1151" lang="grc">
+        <span id="w_104_1" class="ocr_word" title="bbox 1491 1089 1656 1152">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβαίνειν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
