--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0155.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0155.html
@@ -1121,14 +1121,14 @@
             <ins class="alt" title="nlp 2.00">κατηύναστο·</ins>
           </span>
         </span>
-        <span id="w_217_1" class="ocr_word" title="bbox 1268 2143 1576 2210">
+        <span id="w_217_1_0" class="ocr_word" title="bbox 1268 2143 1576 2210">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">καταλαβὼν</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1651 2165 1801 2197" lang="grc">
+        <span id="w_217_1_1" class="ocr_word" title="bbox 1268 2143 1576 2210">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταλαβὼν</ins>
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1403,9 +1403,9 @@
             <ins class="alt" title="nlp 1.00">ἐπεπόμφει</ins>
           </span>
         </span>
-        <span id="w_275_0_0" class="ocr_word" title="bbox 1649 2635 1802 2681">
+        <span id="w_275_0_0_0" class="ocr_word" title="bbox 1649 2635 1802 2681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">γραμ-</ins>
+            <ins class="alt" title="nlp 2.00">γραμσυνέβαινεν</ins>
           </span>
         </span>
       </span>
@@ -1415,9 +1415,14 @@
             <ins title="nlp 2.00">4</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 704 2751 729 2789">
+        <span id="w_278_0" class="ocr_word" title="bbox 704 2751 729 2789">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνέβαινεν 6</ins>
+            <ins class="alt" title="nlp 2.00">6</ins>
+          </span>
+        </span>
+        <span id="w_278_1" class="ocr_word" title="bbox 704 2751 729 2789">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 759 2742 916 2801" lang="grc">
@@ -1453,11 +1458,6 @@
         <span id="w_285" class="ocr_word" title="bbox 1608 2763 1696 2800" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_286" class="ocr_word" title="bbox 1729 2759 1803 2789">
-          <span class="alternatives">
-            <ins title="nlp 2.00">om</ins>
           </span>
         </span>
       </span>
