--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0289.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0289.html
@@ -189,9 +189,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 83 505 1822 574">
-        <span id="w_33" class="ocr_word" title="bbox 83 519 109 552">
+        <span id="w_33_0" class="ocr_word" title="bbox 83 519 109 552">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_33_1" class="ocr_word" title="bbox 83 519 109 552">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 140 526 224 571" lang="grc">
@@ -232,11 +237,6 @@
         <span id="w_41" class="ocr_word" title="bbox 1563 514 1663 559" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_42" class="ocr_word" title="bbox 1689 514 1822 560" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Σκυθῶν</ins>
           </span>
         </span>
       </span>
@@ -327,7 +327,7 @@
       <span class="ocr_line" title="bbox 135 735 1825 808">
         <span id="w_61" class="ocr_word" title="bbox 342 735 528 805" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δεινὸς</ins>
+            <ins title="nlp 2.00">δεινὸς</ins>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 553 757 648 804" lang="grc">
@@ -617,9 +617,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 1283 1827 1350">
-        <span id="w_118" class="ocr_word" title="bbox 137 1303 227 1333" lang="grc">
+        <span id="w_118_0" class="ocr_word" title="bbox 137 1303 227 1333">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ’ αὐτῶν</ins>
+            <ins class="alt" title="nlp 2.00">κατ’</ins>
+          </span>
+        </span>
+        <span id="w_118_1" class="ocr_word" title="bbox 137 1303 227 1333">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 495 1283 623 1335" lang="grc">
