--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0290.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0290.html
@@ -267,9 +267,9 @@
             <ins class="alt" title="nlp 1.00">ταῖς</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1895 691 1923 722" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 1895 691 1923 722">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -499,9 +499,14 @@
             <ins class="alt" title="nlp 1.00">τούτου</ins>
           </span>
         </span>
-        <span id="w_97" class="ocr_word" title="bbox 822 1139 1152 1210" lang="grc">
+        <span id="w_97_0" class="ocr_word" title="bbox 822 1139 1152 1210">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ξηρόγυμον</ins>
+            <ins class="alt" title="nlp 2.00">(Ξηρόγυφον</ins>
+          </span>
+        </span>
+        <span id="w_97_1" class="ocr_word" title="bbox 822 1139 1152 1210">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1177 1143 1351 1192" lang="grc">
@@ -512,11 +517,6 @@
         <span id="w_99" class="ocr_word" title="bbox 1389 1144 1632 1209" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐγχωρίως</ins>
-          </span>
-        </span>
-        <span id="w_100" class="ocr_word" title="bbox 1670 1162 1873 1193" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατονομάζουσι)</ins>
           </span>
         </span>
       </span>
@@ -627,12 +627,7 @@
         </span>
         <span id="w_122" class="ocr_word" title="bbox 188 1377 530 1437" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κυκλώσαντες</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 547 1392 556 1404">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">κυκλώσαντες·</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 615 1373 640 1426" lang="grc">
