--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0133.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0133.html
@@ -154,9 +154,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 50 529 1780 598">
-        <span id="w_28" class="ocr_word" title="bbox 50 547 264 596" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 50 547 264 596">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 50 547 264 596">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μενον,</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 325 549 425 590" lang="grc">
@@ -824,11 +829,6 @@
             <ins class="alt" title="nlp 2.00">συνθείς,</ins>
           </span>
         </span>
-        <span id="w_160_1" class="ocr_word" title="bbox 218 1692 456 1757">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_161" class="ocr_word" title="bbox 495 1692 726 1758" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καθάπερ</ins>
@@ -854,9 +854,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_166" class="ocr_word" title="bbox 1502 1714 1585 1743" lang="grc">
+        <span id="w_166_0" class="ocr_word" title="bbox 1502 1714 1585 1743">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_166_1" class="ocr_word" title="bbox 1502 1714 1585 1743">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">παραχρησάμενος.</ins>
           </span>
         </span>
       </span>
@@ -1516,7 +1521,7 @@
         </span>
         <span id="w_301_0" class="ocr_word" title="bbox 987 2876 1038 2916">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">18’</ins>
+            <ins class="alt" title="nlp 2.00">’</ins>
           </span>
         </span>
         <span id="w_301_1" class="ocr_word" title="bbox 987 2876 1038 2916">
