--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0291.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0291.html
@@ -320,9 +320,14 @@
             <ins class="alt" title="nlp 1.00">ἀπῃώρηντο,</ins>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 1121 758 1180 788" lang="grc">
+        <span id="w_59_0" class="ocr_word" title="bbox 1121 758 1180 788">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ’ ἐκεῖνα</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ’</ins>
+          </span>
+        </span>
+        <span id="w_59_1" class="ocr_word" title="bbox 1121 758 1180 788">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐκεῖνα</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1449 761 1532 791" lang="grc">
@@ -846,9 +851,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 65 1743 1870 1812">
-        <span id="w_160" class="ocr_word" title="bbox 65 1770 94 1804">
+        <span id="w_160_0" class="ocr_word" title="bbox 65 1770 94 1804">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_160_1" class="ocr_word" title="bbox 65 1770 94 1804">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 119 1766 218 1807" lang="grc">
@@ -894,11 +904,6 @@
         <span id="w_169" class="ocr_word" title="bbox 1635 1746 1805 1811" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σχίζαν</ins>
-          </span>
-        </span>
-        <span id="w_170" class="ocr_word" title="bbox 1828 1759 1870 1792">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
       </span>
@@ -1467,19 +1472,18 @@
             <ins title="nlp 2.00">om</ins>
           </span>
         </span>
-        <span id="w_280" class="ocr_word" title="bbox 1525 2788 1576 2826">
+        <span id="w_280_0" class="ocr_word" title="bbox 1525 2788 1576 2826">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31</ins>
+            <ins class="alt" title="nlp 2.00">31</ins>
+          </span>
+        </span>
+        <span id="w_280_1" class="ocr_word" title="bbox 1525 2788 1576 2826">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὑπανοίξαντες</ins>
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 126 2849 292 2901">
-        <span id="w_282" class="ocr_word" title="bbox 126 2849 292 2901" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὑπανοίξαντες</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 126 2849 292 2901"/>
     </div>
   </body>
 </html>
