--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0191.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0191.html
@@ -1381,12 +1381,12 @@
             <ins class="alt" title="nlp 1.00">ἀνήλωτο</ins>
           </span>
         </span>
-        <span id="w_272_0" class="ocr_word" title="bbox 375 2553 520 2619">
+        <span id="w_272_0_0" class="ocr_word" title="bbox 375 2553 520 2619">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(“καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(“χκὶ</ins>
           </span>
         </span>
-        <span id="w_272_1" class="ocr_word" title="bbox 375 2553 520 2619">
+        <span id="w_272_0_1" class="ocr_word" title="bbox 375 2553 520 2619">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1419,11 +1419,6 @@
         <span id="w_278" class="ocr_word" title="bbox 1378 2574 1461 2605" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_279" class="ocr_word" title="bbox 1489 2557 1806 2620" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ζωγρηθῆναι</ins>
           </span>
         </span>
       </span>
