--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0292.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0292.html
@@ -1303,9 +1303,9 @@
             <ins title="nlp 2.00">τούτους</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 1933 2473 1961 2507">
+        <span id="w_252_0" class="ocr_word" title="bbox 1933 2473 1961 2507">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -1322,12 +1322,7 @@
         </span>
         <span id="w_255" class="ocr_word" title="bbox 375 2527 597 2594" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκρατῶς</ins>
-          </span>
-        </span>
-        <span id="w_256" class="ocr_word" title="bbox 613 2548 624 2558">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">ἀκρατῶς·</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 667 2532 771 2583" lang="grc">
