--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0293.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0293.html
@@ -359,7 +359,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 786 858 1207 921" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Bουλγαροφύγου</ins>
+            <ins title="nlp 2.00">ουλγαροφύγου</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1245 875 1329 905" lang="grc">
@@ -379,7 +379,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1703 858 1796 904" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Nικαίας</ins>
+            <ins title="nlp 2.00">ικαίας</ins>
           </span>
         </span>
       </span>
