--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0409.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0409.html
@@ -661,23 +661,18 @@
             <ins class="alt" title="nlp 1.00">προείρηκα</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 1699 1389 1806 1438" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 1699 1389 1806 1438">
           <span class="alternatives">
-            <ins title="nlp 2.00">κίν-</ins>
+            <ins class="alt" title="nlp 2.00">κίνδυνον.</ins>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 1832 1406 1871 1437">
+        <span id="w_125_1" class="ocr_word" title="bbox 1699 1389 1806 1438">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 1467 1809 1533">
-        <span id="w_127" class="ocr_word" title="bbox 110 1469 280 1517" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δυνον.</ins>
-          </span>
-        </span>
         <span id="w_128" class="ocr_word" title="bbox 355 1484 441 1515" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -802,9 +797,14 @@
             <ins class="alt" title="nlp 1.00">πολύν</ins>
           </span>
         </span>
-        <span id="w_152_0" class="ocr_word" title="bbox 873 1621 976 1683">
+        <span id="w_152_0_0" class="ocr_word" title="bbox 873 1621 976 1683">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_152_0_1" class="ocr_word" title="bbox 873 1621 976 1683">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1021 1641 1114 1687" lang="grc">
@@ -825,11 +825,6 @@
         <span id="w_156" class="ocr_word" title="bbox 1449 1629 1535 1670" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_157" class="ocr_word" title="bbox 1573 1623 1687 1686" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βοὸς ἐπὶ</ins>
           </span>
         </span>
       </span>
@@ -1138,7 +1133,7 @@
         </span>
         <span id="w_218_1" class="ocr_word" title="bbox 1688 2161 1810 2211">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
