--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0156.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0156.html
@@ -59,19 +59,19 @@
             <ins class="alt" title="nlp 2.00">αἰτούμενος,</ins>
           </span>
         </span>
-        <span id="w_8_1" class="ocr_word" title="bbox 1128 303 1441 365">
+        <span id="w_8_1_0" class="ocr_word" title="bbox 1128 303 1441 365">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">κἂν</ins>
+          </span>
+        </span>
+        <span id="w_8_1_1" class="ocr_word" title="bbox 1128 303 1441 365">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1479 318 1576 347" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀν</ins>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1611 294 1635 346" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">βασιλεὺς</ins>
           </span>
         </span>
       </span>
@@ -1142,19 +1142,19 @@
             <ins class="alt" title="nlp 2.00">ναυτικῶν</ins>
           </span>
         </span>
-        <span id="w_220_1" class="ocr_word" title="bbox 943 2169 1192 2217">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_221" class="ocr_word" title="bbox 1246 2168 1503 2233" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐμπειρίαν</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1562 2185 1630 2226" lang="grc">
+        <span id="w_222_0" class="ocr_word" title="bbox 1562 2185 1630 2226">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰς</ins>
+            <ins class="alt" title="nlp 2.00">εἰς</ins>
+          </span>
+        </span>
+        <span id="w_222_1" class="ocr_word" title="bbox 1562 2185 1630 2226">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πολέμου</ins>
           </span>
         </span>
       </span>
@@ -1283,9 +1283,14 @@
             <ins class="alt" title="nlp 1.00">μέχρι</ins>
           </span>
         </span>
-        <span id="w_247" class="ocr_word" title="bbox 1352 2405 1658 2466" lang="grc">
+        <span id="w_247_0" class="ocr_word" title="bbox 1352 2405 1658 2466">
           <span class="alternatives">
-            <ins title="nlp 2.00">Βοθρεντοῦ.</ins>
+            <ins class="alt" title="nlp 2.00">βοθρεντοῦ.</ins>
+          </span>
+        </span>
+        <span id="w_247_1" class="ocr_word" title="bbox 1352 2405 1658 2466">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κἀκεῖσε</ins>
           </span>
         </span>
       </span>
@@ -1488,9 +1493,14 @@
             <ins class="alt" title="nlp 1.00">16</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 866 2812 1124 2872" lang="grc">
+        <span id="w_288_0" class="ocr_word" title="bbox 866 2812 1124 2872">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξαρτήσας</ins>
+            <ins class="alt" title="nlp 2.00">ἐξαρτήσας</ins>
+          </span>
+        </span>
+        <span id="w_288_1" class="ocr_word" title="bbox 866 2812 1124 2872">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(s)</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1316 2825 1369 2864">
@@ -1545,14 +1555,14 @@
             <ins class="alt" title="nlp 2.00">Βαϊμούντου</ins>
           </span>
         </span>
-        <span id="w_298_1" class="ocr_word" title="bbox 746 2874 1046 2926">
+        <span id="w_299_0" class="ocr_word" title="bbox 1079 2889 1162 2917">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 1079 2889 1162 2917" lang="grc">
+        <span id="w_299_1" class="ocr_word" title="bbox 1079 2889 1162 2917">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">του</ins>
+            <ins class="alt" title="nlp 2.00">προφθάσαντος</ins>
           </span>
         </span>
       </span>
