--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0193.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0193.html
@@ -919,7 +919,7 @@
         </span>
         <span id="w_177_0" class="ocr_word" title="bbox 454 1868 816 1936">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἀπεγνωκότες</ins>
+            <ins class="alt" title="nlp 2.00">ἀπεγνωκότες</ins>
           </span>
         </span>
         <span id="w_177_1" class="ocr_word" title="bbox 454 1868 816 1936">
