--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0165.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0165.html
@@ -1381,12 +1381,12 @@
             <ins class="alt" title="nlp 1.00">μάχης</ins>
           </span>
         </span>
-        <span id="w_268_0" class="ocr_word" title="bbox 1686 2540 1820 2605">
+        <span id="w_268_0_0" class="ocr_word" title="bbox 1686 2540 1820 2605">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐξήρ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξήρἐνὸν</ins>
           </span>
         </span>
-        <span id="w_268_1" class="ocr_word" title="bbox 1686 2540 1820 2605">
+        <span id="w_268_0_1" class="ocr_word" title="bbox 1686 2540 1820 2605">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1396,11 +1396,6 @@
         <span id="w_270_0" class="ocr_word" title="bbox 8 2639 49 2675">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">v.</ins>
-          </span>
-        </span>
-        <span id="w_270_1" class="ocr_word" title="bbox 8 2639 49 2675">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_271_0" class="ocr_word" title="bbox 71 2641 111 2673">
@@ -1460,11 +1455,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 135 2691 1822 2761">
-        <span id="w_283" class="ocr_word" title="bbox 135 2696 249 2747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνὸν</ins>
-          </span>
-        </span>
         <span id="w_284" class="ocr_word" title="bbox 296 2715 382 2746" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
