--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0297.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0297.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 714 744 1224 812">
         <span id="w_0" class="ocr_word" title="bbox 714 744 896 806">
           <span class="alternatives">
-            <ins title="nlp 2.00">AΔΕΞΙΑΣ Η</ins>
+            <ins title="nlp 2.00">ΔΕΞΙΑΣ Η</ins>
           </span>
         </span>
       </span>
@@ -405,9 +405,14 @@
             <ins class="alt" title="nlp 1.00">ὁπλίσας</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 768 1601 817 1649" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 768 1601 817 1649">
           <span class="alternatives">
-            <ins title="nlp 2.00">δι’ ὅλης</ins>
+            <ins class="alt" title="nlp 2.00">δι’</ins>
+          </span>
+        </span>
+        <span id="w_81_1" class="ocr_word" title="bbox 768 1601 817 1649">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὅλης</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1031 1619 1212 1660" lang="grc">
