--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0134.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0134.html
@@ -178,11 +178,6 @@
             <ins class="alt" title="nlp 2.00">Κοσμᾶς,</ins>
           </span>
         </span>
-        <span id="w_31_1" class="ocr_word" title="bbox 668 545 899 604">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_32" class="ocr_word" title="bbox 939 557 997 589" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὗ</ins>
@@ -193,9 +188,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1141 539 1379 607" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1141 539 1379 607">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρότερον</ins>
+            <ins class="alt" title="nlp 2.00">πρότερου</ins>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 1141 539 1379 607">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">διεμνημονεύσαμεν,</ins>
           </span>
         </span>
       </span>
@@ -334,14 +334,14 @@
             <ins class="alt" title="nlp 2.00">σηκῷ,</ins>
           </span>
         </span>
-        <span id="w_61_1" class="ocr_word" title="bbox 1254 787 1414 838">
+        <span id="w_62_0" class="ocr_word" title="bbox 1451 792 1537 823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 1451 792 1537 823" lang="grc">
+        <span id="w_62_1" class="ocr_word" title="bbox 1451 792 1537 823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins class="alt" title="nlp 2.00">ἀρχιεραικὸν</ins>
           </span>
         </span>
       </span>
@@ -658,14 +658,14 @@
             <ins class="alt" title="nlp 2.00">πέδιλα,</ins>
           </span>
         </span>
-        <span id="w_124_1" class="ocr_word" title="bbox 1508 1314 1709 1381">
+        <span id="w_125_0" class="ocr_word" title="bbox 1756 1312 1815 1366">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_125" class="ocr_word" title="bbox 1756 1312 1815 1366" lang="grc">
+        <span id="w_125_1" class="ocr_word" title="bbox 1756 1312 1815 1366">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -1120,11 +1120,6 @@
             <ins class="alt" title="nlp 2.00">28</ins>
           </span>
         </span>
-        <span id="w_215_1" class="ocr_word" title="bbox 159 2185 202 2218">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_217" class="ocr_word" title="bbox 562 2174 827 2220" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πεισθεῖσα</ins>
@@ -1246,11 +1241,6 @@
             <ins class="alt" title="nlp 2.00">διατηρηθῆναι,</ins>
           </span>
         </span>
-        <span id="w_240_1" class="ocr_word" title="bbox 427 2405 822 2471">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_241" class="ocr_word" title="bbox 849 2402 970 2454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -1266,9 +1256,14 @@
             <ins class="alt" title="nlp 1.00">συμβασιλεύειν</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1524 2424 1655 2454" lang="grc">
+        <span id="w_244_0" class="ocr_word" title="bbox 1524 2424 1655 2454">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτῷ</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῷ</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 1524 2424 1655 2454">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κἀκεῖνον</ins>
           </span>
         </span>
       </span>
@@ -1367,11 +1362,6 @@
             <ins class="alt" title="nlp 2.00">αἰτήσεως,</ins>
           </span>
         </span>
-        <span id="w_264_1" class="ocr_word" title="bbox 223 2637 489 2702">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_265" class="ocr_word" title="bbox 545 2635 665 2687" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -1387,9 +1377,14 @@
             <ins title="nlp 2.00">χρυσόβουλλον</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1421 2639 1568 2707" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 1421 2639 1568 2707">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγον</ins>
+            <ins class="alt" title="nlp 2.00">λόγου</ins>
+          </span>
+        </span>
+        <span id="w_268_1" class="ocr_word" title="bbox 1421 2639 1568 2707">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">βεβαιοῦντα</ins>
           </span>
         </span>
       </span>
