--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0194.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0194.html
@@ -1380,11 +1380,6 @@
             <ins class="alt" title="nlp 2.00">λταστῶν</ins>
           </span>
         </span>
-        <span id="w_265_1" class="ocr_word" title="bbox 296 2832 516 2875">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_266" class="ocr_word" title="bbox 547 2833 905 2892">
           <span class="alternatives">
             <ins title="nlp 2.00">Diesterwegius:</ins>
@@ -1412,7 +1407,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1526 2845 1769 2889" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολλοστῶν</ins>
+            <ins title="nlp 2.00">πολοστῶν C</ins>
           </span>
         </span>
       </span>
