--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0411.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0411.html
@@ -325,9 +325,14 @@
             <ins class="alt" title="nlp 1.00">φρουρούντων</ins>
           </span>
         </span>
-        <span id="w_61_0" class="ocr_word" title="bbox 1056 761 1152 823">
+        <span id="w_61_0_0" class="ocr_word" title="bbox 1056 761 1152 823">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔτι</ins>
+            <ins class="alt" title="nlp 2.00">(ἔτι</ins>
+          </span>
+        </span>
+        <span id="w_61_0_1" class="ocr_word" title="bbox 1056 761 1152 823">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1188 781 1280 828" lang="grc">
@@ -338,11 +343,6 @@
         <span id="w_63" class="ocr_word" title="bbox 1318 780 1458 811" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτο</ins>
-          </span>
-        </span>
-        <span id="w_64" class="ocr_word" title="bbox 1495 768 1722 827" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατεῖχον οἱ</ins>
           </span>
         </span>
       </span>
@@ -968,9 +968,9 @@
             <ins class="alt" title="nlp 1.00">πολέμου</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1671 1841 1798 1895" lang="grc">
+        <span id="w_189_0" class="ocr_word" title="bbox 1671 1841 1798 1895">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπο-</ins>
+            <ins class="alt" title="nlp 2.00">ἀποχρῶντος.</ins>
           </span>
         </span>
       </span>
