--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0157.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0157.html
@@ -738,11 +738,6 @@
             <ins class="alt" title="nlp 2.00">πολύς,</ins>
           </span>
         </span>
-        <span id="w_141_1" class="ocr_word" title="bbox 412 1453 594 1519">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_142" class="ocr_word" title="bbox 645 1458 874 1521" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ᾤμωζον,</ins>
@@ -753,9 +748,14 @@
             <ins class="alt" title="nlp 1.00">ἐποτνιῶντο,</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1299 1456 1630 1506" lang="grc">
+        <span id="w_144_0" class="ocr_word" title="bbox 1299 1456 1630 1506">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐθεοκλύτουν</ins>
+            <ins class="alt" title="nlp 2.00">ἐθεοκλύτουν</ins>
+          </span>
+        </span>
+        <span id="w_144_1" class="ocr_word" title="bbox 1299 1456 1630 1506">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">θεὸν</ins>
           </span>
         </span>
       </span>
@@ -1250,19 +1250,19 @@
             <ins class="alt" title="nlp 2.00">σκάφος,</ins>
           </span>
         </span>
-        <span id="w_243_1" class="ocr_word" title="bbox 1338 2308 1555 2372">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_244" class="ocr_word" title="bbox 1596 2326 1650 2357" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_245" class="ocr_word" title="bbox 1688 2328 1724 2356" lang="grc">
+        <span id="w_245_0" class="ocr_word" title="bbox 1688 2328 1724 2356">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ᾧ</ins>
+            <ins class="alt" title="nlp 2.00">ᾦ</ins>
+          </span>
+        </span>
+        <span id="w_245_1" class="ocr_word" title="bbox 1688 2328 1724 2356">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -1423,11 +1423,6 @@
             <ins class="alt" title="nlp 2.00">τινά,</ins>
           </span>
         </span>
-        <span id="w_279_1" class="ocr_word" title="bbox 655 2620 791 2686">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_280" class="ocr_word" title="bbox 833 2622 880 2681" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
@@ -1448,9 +1443,14 @@
             <ins title="nlp 2.00">ναυτικὸν</ins>
           </span>
         </span>
-        <span id="w_284" class="ocr_word" title="bbox 1394 2637 1480 2668" lang="grc">
+        <span id="w_284_0" class="ocr_word" title="bbox 1394 2637 1480 2668">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_284_1" class="ocr_word" title="bbox 1394 2637 1480 2668">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτου</ins>
           </span>
         </span>
       </span>
