--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0298.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0298.html
@@ -242,7 +242,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1778 609 1899 654" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Xοιροβάκχων</ins>
+            <ins title="nlp 2.00">οιροβάκχων</ins>
           </span>
         </span>
       </span>
@@ -776,12 +776,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 883 1537 1246 1600" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποκλίναντας</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1263 1557 1274 1569">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">ἀποκλίναντας·</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1316 1545 1508 1605" lang="grc">
@@ -1066,9 +1061,14 @@
             <ins class="alt" title="nlp 1.00">αὐτῶν</ins>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 1632 2005 1956 2071" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 1632 2005 1956 2071">
           <span class="alternatives">
-            <ins title="nlp 2.00">δοκιμάσαι V.</ins>
+            <ins class="alt" title="nlp 2.00">δοκιμάσαι</ins>
+          </span>
+        </span>
+        <span id="w_204_1" class="ocr_word" title="bbox 1632 2005 1956 2071">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">V.</ins>
           </span>
         </span>
       </span>
@@ -1165,9 +1165,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_223" class="ocr_word" title="bbox 1661 2180 1748 2227" lang="grc">
+        <span id="w_223_0" class="ocr_word" title="bbox 1661 2180 1748 2227">
           <span class="alternatives">
-            <ins title="nlp 2.00">μετ' αὐτῶν</ins>
+            <ins class="alt" title="nlp 2.00">μετ’</ins>
+          </span>
+        </span>
+        <span id="w_223_1" class="ocr_word" title="bbox 1661 2180 1748 2227">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
       </span>
