--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0159.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0159.html
@@ -293,14 +293,14 @@
             <ins class="alt" title="nlp 2.00">πόλεως·</ins>
           </span>
         </span>
-        <span id="w_53_1" class="ocr_word" title="bbox 1315 681 1523 743">
+        <span id="w_54_0" class="ocr_word" title="bbox 1563 682 1648 732">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1563 682 1648 732" lang="grc">
+        <span id="w_54_1" class="ocr_word" title="bbox 1563 682 1648 732">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">ἡμῖν</ins>
           </span>
         </span>
       </span>
